--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<h1>page workingg</h1>
 <h2>Connexion</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <label for="email">Email</label>
