--- a/frontend/src/app/timetable/timetable.component.html
+++ b/frontend/src/app/timetable/timetable.component.html
@@ -1,9 +1,9 @@
 <dx-scheduler [dataSource]="appointments" [(currentDate)]="currentDate" textExpr="title" allDayExpr="dayLong"
   recurrenceRuleExpr="recurrence" currentView="week" [crossScrollingEnabled]="true" recurrenceEditMode="occurrence"
-  [adaptivityEnabled]="true" [showAllDayPanel]="true" [cellDuration]="20" [height]="600"
+  [adaptivityEnabled]="true" [showAllDayPanel]="false" [cellDuration]="20" [height]="600"
   appointmentTemplate="appointment-template" appointmentTooltipTemplate="tooltip-template"
-  (onAppointmentAdded)="onAppointmentAdded($event)" (onAppointmentFormOpening)="onAppointmentFormOpening($event)"
-  (onAppointmentUpdated)="onAppointmentUpdated($event)" >
+  (onAppointmentAdding)="onAppointmentAdding($event)" (onAppointmentFormOpening)="onAppointmentFormOpening($event)" 
+  (onAppointmentUpdating)="onAppointmentUpdating($event)">
 
   <dxi-view type="day" [startDayHour]="6" [endDayHour]="23"></dxi-view>
   <dxi-view type="week" [startDayHour]="8" [endDayHour]="23"></dxi-view>
@@ -17,8 +17,7 @@
   <div *dxTemplate="let model of 'appointment-template'">
     <div>
       <strong>{{ model.appointmentData.title }}</strong><br>
-      <span>User: {{ getUserById(model.appointmentData.userId)?.firstname }} {{
-        getUserById(model.appointmentData.userId)?.lastname }}</span><br>
+      <span>User: {{ model.appointmentData.user }} </span><br>
       <span>Description: {{ model.appointmentData.description }}</span><br>
     </div>
   </div>
@@ -26,8 +25,7 @@
   <div *dxTemplate="let model of 'tooltip-template'">
     <div>
       <strong>{{ model.appointmentData.title }}</strong><br>
-      <span>User: {{ getUserById(model.appointmentData.userId)?.firstname }} {{
-        getUserById(model.appointmentData.userId)?.lastname }}</span><br>
+      <span>User: {{ model.appointmentData.user }} </span><br>
       <span>Description: {{ model.appointmentData.description }}</span><br>
       <button (click)="onDeleteAppointment(model.appointmentData, $event)">Delete</button>
     </div>
