Establish the connection between the front and back

--- a/frontend/app/src/app/app.component.html
+++ b/frontend/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span style="flex-grow: 1;">My Application</span> <!-- Titre de l'application, aligné à gauche -->
+  <span style="flex-grow: 1;">Projet Technos web</span> <!-- Titre de l'application, aligné à gauche -->
 
   <button mat-button routerLink="/login">Login</button>
   <button mat-button routerLink="/register">Register</button>
