--- a/frontend/app/src/app/app.component.html
+++ b/frontend/app/src/app/app.component.html
@@ -1,8 +1,10 @@
 <mat-toolbar color="primary">
-  <span style="flex-grow: 1;">Projet Technos web</span> <!-- Titre de l'application, aligné à gauche -->
-
-  <button mat-button routerLink="/login">Login</button>
-  <button mat-button routerLink="/register">Register</button>
+  <span style="flex-grow: 1;">Projet Technos Web</span>
+  
+  <button mat-button *ngIf="!isLoggedIn()" routerLink="/login">Login</button>
+  <button mat-button *ngIf="!isLoggedIn()" routerLink="/register">Register</button>
+  
+  <button mat-button *ngIf="isLoggedIn()" (click)="logout()">Logout</button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
