--- a/frontend/app/src/app/auth/login/login.component.html
+++ b/frontend/app/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit()" style="display: flex; flex-direction: column; width: 300px; margin: auto;">
   <mat-form-field appearance="outline">
-    <mat-label>Login</mat-label>
-    <input matInput type="email" id="login" [(ngModel)]="loginData.login" name="login" required />
+    <mat-label>Email</mat-label>
+    <input matInput type="text" id="login" [(ngModel)]="loginData.login" name="login" required />
   </mat-form-field>
 
   <mat-form-field appearance="outline">
